@@ -28,6 +28,9 @@ html {
   height: 100%;
   font-size: 16px;
 }
+fieldset {
+  border: 0;
+}
 body {
   min-height: 100%;
   display: -webkit-box;
